2009-09-01  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=28842
        [GTK] Do not emit extra FINISHED load-status signals

        Do not emit FINISHED load-status signals on our own, just rely on
        WebCore for that. Avoids emitting FINISHED several times when we
        fail to load a URI.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidFailProvisionalLoad):
        (WebKit::FrameLoaderClient::dispatchDidFailLoad):
        * tests/testloading.c:
        (web_loading_fixture_setup):
        (web_loading_fixture_teardown):
        (load_finished_cb):
        (status_changed_cb):
        (test_loading_status):
        (load_error_status_changed_cb):
        (load_error_cb):
        (test_loading_error):
        (main):
        * webkit/webkitwebframe.h:

Canonical link: https://commits.webkit.org/39500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47924 268f45cc-cd09-0410-ab3c-d52691b4dbfc